--- a/cdk_infra/requirements.txt
+++ b/cdk_infra/requirements.txt
@@ -4,3 +4,4 @@ aws-cdk.aws-iam==1.116.0
 aws-cdk.aws-lambda-go==1.116.0
 aws-cdk.aws-s3-notifications==1.116.0
 aws-cdk.aws-lambda-event-sources==1.116.0
+aws-cdk.aws-events-targets==1.116.0
